--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Manas Desai - Portfolio Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,14 +46,12 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <img src="assets/img/Professional_photo.jpeg" alt="Manas Desai" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Manas Desai</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="mailto:desaimanas808@gmail.com" class="email"><i class="bx bx-mail-send"></i></a>
+          <a href="https://www.linkedin.com/in/manas-desai-131523198/" class="linkedin" rel="noopener noreferrer"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/manasdesai" class="github" rel="noopener noreferrer"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -77,10 +75,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfolio Details</li>
           </ol>
         </div>
 
